# sentiment-analysis-mlops

./: .gitignore  Dockerfile  LICENSE  Makefile  README.md  deployment.yaml  dvc.yaml  main.py  pyproject.toml  requirements.txt  service.yaml  setup.py
.dvc/: config
.github/workflows/: ci.yaml
app/: app.py  load_model_test.py  preprocessing_utility.py
data/interim/: test_processed.csv  train_processed.csv
docs/: Makefile  conf.py  index.rst  make.bat
flask_app/: app.py  requirements.txt
k8s/: deployment.yaml
models/: model.pkl  vectorizer.pkl
notebooks/: data.csv  exp_baseline.ipynb  exp_hypertune.py  exp_model_selection.py
reports/: experiment_info.json
scripts/: promote_model.py
src/connection/: config.json  s3_connection.py  ssms_connection.py
src/data/: data_ingestion.py  data_preprocessing.py
src/features/: feature_engineering.py
src/logger/: __init__.py  core.py
src/model/: model_building.py  model_evaluation.py  register_model.py
tests/: test_flask_app.py  test_model.py
