[project]
name = "sentiment-analysis-mlops"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "scikit-learn==1.5.1",
    "pandas==2.2.2",
    "numpy==1.26.4",
    "scipy==1.14.0",
    "matplotlib==3.9.1",
    "nltk==3.8.1",
    "dvc==3.53.0",
    "mlflow==2.15.0",
    "dagshub==0.3.34",
    "hydra-core==1.3.2",
    "Flask==3.0.3",
    "pydantic==2.8.2",
    "graphene==3.3",
    "gql==3.5.0",
    "boto3==1.34.131",
    "awscli",
    "celery==5.4.0",
    "SQLAlchemy==2.0.31",
    "docker==7.1.0",
    "prometheus-client",
    "requests==2.32.3",
    "PyYAML==6.0.1",
    "tqdm==4.66.4",
    "setuptools<70",
    "xgboost>=3.2.0",
    "python-dotenv>=1.2.2",
    "pathspec==0.12.1",
    "dvc-s3>=3.3.0",
]
